<resources>
    <string name="app_name">Qualifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_code_helper_text">Enter subject code</string>
    <string name="name_field_label">Name</string>
    <string name="code_field_label">Code</string>
    <string name="register_subject_button_text">Register subject</string>
    <string name="subject_name_helper_text">Enter subject name</string>
    <string name="register_subject_title">Register subject</string>
    <string name="subject_item_code">Code: %1$s</string>
    <string name="subject_qualifications_item">Qualifications: %1$.2f, %2$.2f, %3$.2f</string>
    <string name="subject_definitive_item">Definitive: %1$.2f</string>
    <string name="register_qualification_title">Register qualification</string>
    <string name="first_cort_text">Cort 1</string>
    <string name="second_cort_text">Cort 2</string>
    <string name="third_cort_text">Cort 3</string>
    <string name="add_activity_button_text">Add activity</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_definitive_text">Definitive: %1$.2f</string>
    <string name="statistics_registered_subjects_text">Registered subjects: %1$d</string>
    <string name="statistics_approved_subjects_text">Approved subjects: %1$d</string>
    <string name="statistics_failed_subjects_text">Failed subjects: %1$d</string>
    <string name="register_activity_title">Register activity</string>
    <string name="activity_name_field">Name</string>
    <string name="activity_note_field">Note</string>
    <string name="activity_percent_field">Percent</string>
    <string name="activity_name_helper_text">Enter activity name</string>
    <string name="activity_note_helper_text">Enter activity note</string>
    <string name="activity_percent_helper_text">Enter activity percent</string>
    <string name="register_qualification_subject_name_text">Subject name: %1$s</string>
    <string name="activity_note_item">Note: %1$.2f</string>
    <string name="activity_percent_item">Percent: %1$.2f%%</string>
    <string name="percent_complete_without_cort">Percent complete: (Select a cort)</string>
    <string name="percent_complete_with_cort">Percent complete: %1$.2f%%</string>
    <string name="update_subject_button_text">Update subject</string>
    <string name="edit_activity_title">Edit activity</string>
    <string name="register_activity_button_text">Register activity</string>
    <string name="update_activity_button_text">Update activity</string>
    <string name="activities_title">Activities</string>
    <string name="cort_definitive_without_cort">Cort definitive: (Select a cort)</string>
    <string name="cort_definitive_with_cort">Cort definitive: %1$.2f</string>

    <string name="login_title">Sign in</string>
    <string name="user_or_email_hint">Username/Email</string>
    <string name="user_or_email_text_helper">Enter your username o email</string>
    <string name="password_helper_text">Enter your password</string>
    <string name="password_hint">Password</string>
    <string name="keep_session_hint">Keep Session</string>
    <string name="forgotten_password_text">Forgot password?</string>
    <string name="not_register_text">Not register?</string>
    <string name="register_user_title">Register user</string>
    <string name="email_hint">Email</string>
    <string name="email_text_helper">Enter your email</string>
    <string name="username_hint">Username</string>
    <string name="username_helper_text">Enter your username</string>
    <string name="logout_hint">Logout</string>
    <string name="activity_name_default_text">Activity name</string>
    <string name="edit_activity_text">Edit activity</string>
    <string name="delete_activity_text">Delete activity</string>
    <string name="subject_image_text">Subject images</string>
    <string name="subject_name_default">Subject name</string>
    <string name="edit_subject_text">Edit subject</string>
    <string name="subject_delete_text">Subject delete</string>
</resources>