<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.EditActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/edit_activity_title">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:layout_margin="@dimen/margin_5"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/activity_name_field"
                app:helperTextEnabled="true"
                app:helperText="@string/activity_name_helper_text">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_note_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/activity_note_field"
                app:helperTextEnabled="true"
                app:helperText="@string/activity_note_helper_text">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_percent_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/activity_percent_field"
                app:helperTextEnabled="true"
                app:helperText="@string/activity_percent_helper_text">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_activity_button"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_round_update"
            app:iconGravity="textStart"
            android:text="@string/update_activity_button_text">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</FrameLayout>