<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/statistics_title">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">
            <TextView
                android:id="@+id/definitive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginBottom="@dimen/padding_10"
                android:textSize="@dimen/subtitle_text"
                android:text="@string/statistics_definitive_text">
            </TextView>
            <TextView
                android:id="@+id/registered_subjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_10"
                android:text="@string/statistics_registered_subjects_text">
            </TextView>
            <TextView
                android:id="@+id/approved_subjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_10"
                android:text="@string/statistics_approved_subjects_text">
            </TextView>
            <TextView
                android:id="@+id/failed_subjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_10"
                android:text="@string/statistics_failed_subjects_text">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>