<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_45"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_25"
            android:paddingEnd="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_user_or_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_or_email_hint"
                android:textColorHint="@color/mid_gray"
                app:boxStrokeColor="@color/mid_gray"
                app:helperText="@string/user_or_email_text_helper"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:hint="@string/password_hint"
                app:helperText="@string/password_helper_text"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_spacing"
                android:paddingBottom="@dimen/small_spacing">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sw_keep_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/extra_small_spacing"
                    android:textColor="@color/mid_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_session_hint" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:text="@string/login_title"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forgotten_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotten_password_text"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_not_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_25"
                    android:text="@string/not_register_text"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>